<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Login App</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingrese_usuario">Ingrese su nombre de usuario</string>
    <string name="ingrese_password">Ingrese su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="registrar">Registrar</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="person">Person</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>